erDiagram
  USERS {
    INTEGER id PK
    VARCHAR username
    VARCHAR hashed_password
    VARCHAR role
  }
  STUDY_TARGETS {
    INTEGER id PK
    INTEGER user_id FK
    VARCHAR title
  }
  MATERIALS {
    INTEGER id PK
    INTEGER user_id FK
    INTEGER target_id FK
    VARCHAR original_filename
    TEXT parsed_text
    VARCHAR parse_status
  }
  KNOWLEDGE_POINTS {
    INTEGER id PK
    INTEGER target_id FK
    INTEGER parent_id FK
    VARCHAR name
  }
  AI_CALL_LOGS {
    INTEGER id PK
    INTEGER user_id FK
    INTEGER material_id FK
    VARCHAR feature
    VARCHAR provider
    INTEGER latency_ms
    TEXT error_message
  }
  QUESTIONS {
    INTEGER id PK
    INTEGER material_id FK
    INTEGER target_id FK
    TEXT stem
  }
  TEST_RECORDS {
    INTEGER id PK
    INTEGER user_id FK
    INTEGER material_id FK
    INTEGER target_id FK
  }
  WRONG_QUESTIONS {
    INTEGER id PK
    INTEGER user_id FK
    INTEGER question_id FK
    VARCHAR mastery_status
  }
  REVIEW_PLANS {
    INTEGER id PK
    INTEGER user_id FK
    INTEGER target_id FK
  }

  USERS ||--o{ STUDY_TARGETS : owns
  USERS ||--o{ MATERIALS : uploads
  STUDY_TARGETS ||--o{ MATERIALS : contains
  STUDY_TARGETS ||--o{ KNOWLEDGE_POINTS : has
  MATERIALS ||--o{ AI_CALL_LOGS : referenced_by
  MATERIALS ||--o{ QUESTIONS : source_for
  STUDY_TARGETS ||--o{ QUESTIONS : scopes
  USERS ||--o{ TEST_RECORDS : submits
  QUESTIONS ||--o{ WRONG_QUESTIONS : creates
  USERS ||--o{ REVIEW_PLANS : owns
